--- a/set.css
+++ b/set.css
@@ -64,11 +64,18 @@ svg {
   position:absolute;
   width:600px;height:310px;
   text-align:center;
-  padding-top:200px;
-  font-size:72pt;
+  padding-top:160px;
   font-weight:bold;
   text-shadow:0px 0px 10px #fff;
-  opacity:0.8
+  opacity:0.85;
+}
+#modalTitle {
+  font-size:72pt;   
+  line-height:100%;
+}
+#modalSubTitle {
+  font-size:36pt;
+  line-height:100%;
 }
 #elInstructions {
   font-weight: bold;
